test/invalid/unfinished_mixin.d
//T error: mixin:1:0:
//T error: Expected '`' to end string literal, not the end of the input.
//T error: unfinished_mixin.d:6:11:
//T error: mixed in at

string s = mixin("`plop");
